Width and wrap fixes

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -57,7 +57,7 @@ blockquote
 .container
   position: relative
   z-index: 10
-  max-width: 30em
+  max-width: 36em
   margin: 0
   padding: 2em 3em
   background: white
@@ -141,12 +141,12 @@ small
       line-height: 1.3
 
   pre
-    overflow: scroll
     border: 1px solid #ddd
     background-color: #eef
     padding: .4em 1em
     margin-bottom: 2em
     font-size: .9rem
+    white-space: pre-wrap
 
   ul, ol
     margin-left: 1.35em
